force-app/main/default/objects/Strategic_Questions_Feedback__c/Strategic_Questions_Feedback__c.object-meta.xml
<CustomObject>
    <label>Strategic Questions Feedback</label>
    <nameField>
        <displayFormat>SQF-{00000}</displayFormat>
        <label>Strategic Questions Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Questions Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>