force-app/main/default/objects/Strategic_Questions_Feedback__c/fields/AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>