force-app/main/default/objects/Strategic_Questions_Feedback__c/fields/Reason_for_Reprocessing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reprocessing__c</fullName>
    <label>Reason for Reprocessing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modified the Strategy</fullName>
            </value>
            <value>
                <fullName>Modified Strategic Questions</fullName>
            </value>
            <value>
                <fullName>No Changes,Reprocessing for Better Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>