force-app/main/default/objects/Strategic_Questions_Feedback__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP</label>
    <referenceTo>RFP__c</referenceTo>
    <relationshipLabel>Strategic Questions Feedback</relationshipLabel>
    <relationshipName>Strategic_Questions_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>