force-app/main/default/objects/Strategic_Questions_Feedback__c/fields/Strategic_Question_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Question_Numbers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Question Numbers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>